add guild channel list endpoint
