# bot/rest/dist/static/openapi-spec.yaml
@@ -159,6 +159,21 @@ paths:
             application/json:
               schema:
                 type: string
+  /guild/channels:
+    get:
+      summary: "List current Guild Channels"
+      operationId: guildChannelList
+      tags:
+        - guilds
+      responses:
+        default:
+          $ref: '#/components/responses/genericErrorResponse'
+        200:
+          description: Expected response to a valid request
+          content:
+            application/json:
+              schema:
+                type: object
 components:
   responses:
     genericErrorResponse:
@@ -198,7 +213,7 @@ components:
         contacts:
           type: array
           nullable: true
-          example: [ 'UserName.1234' ]
+          example: ['UserName.1234']
           items:
             $ref: "#/components/schemas/GuildContact"
     GuildContact:
